# convert_genome

./: .gitignore  Cargo.toml  README.md  build.rs  install.sh
.github/workflows/: ci.yml  publish.yml  release.yml
benches/: conversion.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_dtc_reader.rs  fuzz_parse_genotype.rs
src/: cli.rs  conversion.rs  converter.rs  dtc.rs  external_sort.rs  harmonize.rs  inference.rs  input.rs  lib.rs  liftover.rs  main.rs  output.rs  panel.rs  panel_writer.rs  plink.rs  reference.rs  remote.rs  report.rs  smart_reader.rs  source_ref.rs  vcf_utils.rs
tests/: compression_tests.rs  data_files_test.rs  integration_test.rs  parity_golden.rs  plink_integration.rs  proptest.proptest-regressions  proptest.rs  remote_download.rs  strand_inference.rs  vcf_liftover.rs
