[package]
name = "convert_genome"
version = "0.1.0"
edition = "2024"
authors = ["Convert Genome Contributors"]
description = "Convert DTC-style genome files to VCF or BCF"
license = "MIT"
repository = "https://github.com/SauersML/convert_genome"
documentation = "https://github.com/SauersML/convert_genome"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
noodles = { version = "0.101", features = ["bcf", "vcf", "fasta", "bgzf", "core"] }
parking_lot = "0.12"
rayon = "1.11"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
time = { version = "0.3", features = ["formatting", "macros"] }
curl = "0.4"
flate2 = "1.1"
lru = "0.16"
tempfile = "3.23"
url = "2.5"
zip = { version = "6.0", default-features = false, features = ["deflate"] }
infer_sex = { git = "https://github.com/SauersML/infer_sex" }
check_build = { git = "https://github.com/SauersML/check_build" }

[build-dependencies]
grep = "0.4"
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
criterion = "0.7"
proptest = "1.9"
pretty_assertions = "1.4"
serde_json = "1.0"

[[bench]]
name = "conversion"
harness = false
