[package]
name = "convert_genome"
version = "0.1.3"
edition = "2024"
authors = ["Convert Genome Contributors"]
description = "Convert DTC, VCF, or BCF genome files to VCF, BCF, or PLINK 1.9"
license = "MIT"
repository = "https://docs.rs/crate/convert_genome/latest"
documentation = "https://docs.rs/crate/convert_genome/latest"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
noodles = { version = "0.101", features = ["bcf", "vcf", "fasta", "bgzf", "core"] }
parking_lot = "0.12"
rayon = "1.11"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
time = { version = "0.3", features = ["formatting", "macros"] }
curl = "0.4"
flate2 = "1.1"
lru = "0.16"
tempfile = "3.23"
url = "2.5"
zip = { version = "6.0", default-features = false, features = ["deflate"] }
infer_sex = "0.1.0"
check_build = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-lapper = "1.2.0"
directories = "6.0.0"

[build-dependencies]
grep = "0.4"
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
criterion = "0.7"
proptest = "1.9"
pretty_assertions = "1.4"
serde_json = "1.0"
serial_test = "3.2"
walkdir = "2.5"

[[bench]]
name = "conversion"
harness = false
